--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": " src/server.js ",
   "homepage": "https://xookeeper.github.io/exceltoxml/",
 "scripts": {
-  "deploy": "gh-pages -d src/server.js"
+  "deploy": "gh-pages -d ."
 },
 
 
