--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": " src/server.js ",
   "homepage": "https://xookeeper.github.io/exceltoxml/",
 "scripts": {
-  "deploy": "gh-pages -d ."
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d public"
 },
 
 
