--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": " src/server.js ",
   "homepage": "https://xookeeper.github.io/exceltoxml/",
 "scripts": {
+  "build": "echo 'Building project...' && mkdir -p build && cp -r public/* build/",
   "predeploy": "npm run build",
-  "deploy": "gh-pages -d public"
+  "deploy": "gh-pages -d build"
 },
   "keywords": [],
   "author": "",
