--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": " src/server.js ",
   "homepage": "https://xookeeper.github.io/exceltoxml/",
 "scripts": {
-  "build": "echo 'Building project...' && mkdir -p build && cp -r public/* build/",
+  "build": "echo 'Building project...' && rm -rf build && mkdir -p build && cp -r public/* build/",
   "predeploy": "npm run build",
   "deploy": "gh-pages -d build"
 },
