--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "firebase": "^11.1.0",
     "multer": "^1.4.5-lts.1",
     "xlsx": "^0.18.5"
   },
