--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.12.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
